--- a/archive-p.html
+++ b/archive-p.html
@@ -27,7 +27,7 @@
                     <a href="abby.html"><p class="names meta s-name" style="top: 45vh; left: 64vw;">Abby</p></a>
                     <a href="nick.html"><p class="names meta s-name" style="top: 23vh; left: 5vw;">Nick</p></a>
                     <a href="alexC.html"><p class="names meta sm-name" style="top: 20vh; left: 52vw;">Alex</p></a>
-                    <a href="matthew.html"><img src="images/matthew.png" class="names meta sm-name" style="top: 31vh; left: 66vw; height: 8vh;"></a>
+                    <a href="matthew.html"><p class="names meta sm-name" style="top: 31vh; left: 66vw;">Matthew</p></a>
                     <a href="maddy.html"><p class="names meta sm-name" style="top: 5vh; left: 60vw;">Maddy</p></a>
                     <a href="alexN.html"><p class="names meta m-name" style="top: 40vh; left: 15vw;">Alex</p></a>
                     <a href="peeti.html"><p class="names meta m-name" style="top: 53vh; left: 65vw;">Peeti</p></a>
@@ -36,10 +36,10 @@
                     <a href="cal.html"><p class="names meta ml-name" style="top: 38vh; left: 1vw;">Cal</p></a>
                     <a href="maggie.html"><p class="names meta ml-name" style="top: 65vh; left: 15vw;">Maggie</p></a>
                     <a href="rita.html"><p class="names meta ml-name" style="top: -5vh; left: 43vw;">Rita</p></a>
-                    <a href="mars.html"><img src="images/mars.png" class="names meta l-name" style="top: 15vh; left: 57vw;"></a>
+                    <a href="mars.html"><p class="names meta l-name" style="top: 15vh; left: 60vw;">Mars</p></a>
                     <a href="soa.html"><p class="names meta l-name" style="top: 45vh; left: 20vw;">SoA</p></a>
                     <a href="harriet.html"><p class="names meta l-name" style="top: 15vh; left: 10vw;">Harriet</p></a>
-                    <a href="ayanna.html"><img src="images/ayanna.png" class="names meta l-name" style="top: 30vh; left: 38vw;"></a>
+                    <a href="ayanna.html"><p class="names meta l-name" style="top: 30vh; left: 38vw;">Ayanna</p></a>
                     <a href="sherry.html"><p class="names meta l-name" style="top: 5vh; left: 30vw;">Sherry</p></a>
                     <a href="matt.html"><p class="names meta l-name" style="top: 55vh; left: 0vw;">Matt</p></a>
                     <a href="bersabeh.html"><p class="names meta l-name" style="top: -5vh; left: 0;">Bersabeh</p></a>
