--- a/intro-page.html
+++ b/intro-page.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8">
@@ -17,7 +17,7 @@
                     <a href="intro-page.html"><p class="about">about</p></a>
                 </div>
                 <div class="questions">
-                    <p class="myStory meta">Hi, my name is OnYou and yes, it's my real name. </p>
+                    <p class="myStory meta"><span class="myStory-span">Hi, my name is OnYou and yes, it's my real name. </span></p>
                     <p class="myStory meta">OnYou in Korean means warm and soft, and it also has biblical context as 'OnYou' is an adjective that is only used in the Bible in Korea. So growing up, I always took pride in my name and since it is a very unique name in Korean as well, I got a compliment on my name pretty often.</p>
                     <p class="myStory meta">But unfortunately, that was not the case when I started going to high school in Minnesota. High school kids being high school kids, they made a joke out of my name saying things such as "oh she's on you."</p>
                     <p class="myStory meta">I was in a new country, a new school, using a new language. People making jokes out of my name instantly made me even more frustrated than I already was. So I decided to discuss it with my advisor, who brought me to talk to Mr. Simons, the Assistant Director of Student Life. We went to his office to discuss it and he says "You should get an English name."</p>
@@ -27,20 +27,18 @@
                     <p class="myStory meta">My Name is a web-based interactive project that displays the archive of people's story regarding the relationship between their names and identities. </p>
                     <p class="myStory meta">I hope this project to prevent adults from being individuals who can tell others to change their name—or identity—so easily. And I hope the project to inspire everyone to realize the value of their names and love their names.</p>
                     <br>
-                    <a href="archive.html"><p class="meta toArchiveButton">Go to Archieve</p></a>
+                    <a href="archive.html"><p class="meta toArchiveButton">Go to Archive</p></a>
                     <br>
                 </div>
         	</div>
 
         </div>
-        
 
+        <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 
+        <script src="js/javascript.js"></script>
 
-
-
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
     </body>
 </html>
