--- a/tony.html
+++ b/tony.html
@@ -76,8 +76,8 @@
             </div>
             <div class="page">
                 <div class="content">
-                    <p class="helvetica">What's your name?</p>
-                    <a href="newStory.html"><p class="meta addStoryButton">Add my story</p></a>
+                    <p class="helvetica">This is the story behind my name. What's your name?</p>
+                    <a href="newStory.html"><p class="meta addStoryButton">Add your story</p></a>
                 </div>
             </div>
         </div>
