--- a/sherry.html
+++ b/sherry.html
@@ -7,17 +7,17 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
         <link rel="stylesheet" href="https://use.typekit.net/rnh5bvu.css">
         <link href="css/style.css" rel="stylesheet" type="text/css">
-        <link href="css/ayanna.css" rel="stylesheet" type="text/css">
+        <link href="css/sherry.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <audio id="my_audio" src="audio/ayanna.m4a"></audio>
+        <audio id="my_audio" src="audio/sherry.m4a"></audio>
         <div class="docScroller">
             <div class="page">
                 <div class="header">
                     <a href="archive.html"><img class="logo-resize" src="images/logo.png"></a>
                     <div class="cont" style="width: 20vw; display: inline-block;">
                         <div align="center">
-                            <input type="text" name="search" id="search" placeholder="Ayanna" class="form-control searchBox" autocomplete="off"/>
+                            <input type="text" name="search" id="search" placeholder="Sherry" class="form-control searchBox" autocomplete="off"/>
                         </div>
                         <ul class="list-group helvetica-2" id="result"></ul>
                     </div>
@@ -26,56 +26,56 @@
                 </div>
 
                 <div class="content">
-                    <p class="helvetica">My given name is  _______________________________, and I prefer to go by _________________________.</p>
-                    <p class="helvetica">I am not called by any different names by my family or close friends.</p>
-                    <p class="meta one">Ayanna Denise Harrison</p>
-                    <p class="meta two">Ayanna Harrison</p>
-                </div>
-                
-            </div>
-            <div class="page">
-                <div class="content">
-                    <p class="helvetica">I decided to go by __________ because __________________________________.</p>
-                    <p class="meta four">Ayanna</p>
-                    <p class="meta five">I stuck with what I was given</p>
+                    <p class="helvetica">My given name is  __________________________, but I prefer to go by _________<br>__________.</p>
+                    <p class="helvetica">Among my friends and family, I am _______.</p>
+                    <p class="meta one">Kyee Sherry Holmes</p>
+                    <p class="meta zero">Sherry</p>
+                    <p class="meta two">Holmes</p>
+                    <p class="meta three">Kyee</p>
                 </div>
             </div>
             <div class="page">
                 <div class="content">
-                    <p class="helvetica">My legal name was given by _______________, and they named me ___________ because _______________________________________________________________<br>___________________________________________________________________________________________.</p>
+                    <p class="helvetica">I decided to go by __________ because ___________________________________<br>__________________________________________________________________________________________________.</p>
+                    <p class="meta four">Sherry</p>
+                    <p class="meta five">it was the name I was called</p>
+                    <p class="meta-2 six">in school. Later, I found out Sherry is actually my middle name as a young adult</p>
+                </div>
+            </div>
+            <div class="page">
+                <div class="content">
+                    <p class="helvetica">My legal name was given by _______________, and they named me after _____<br>______.</p>
                     <p class="helvetica">My name  does / does not  have a cultural background. <!-- Cultural background of my name is ______________. --></p>
                     <!-- <p class="helvetica">In _________, my name is written _________.</p> -->
-                    <p class="helvetica">__________ means __________________________________.</p>
+                    <p class="helvetica">_________ means ________.</p>
                     <p class="meta seven">my parents</p>
-                    <p class="meta eight">Ayanna</p>
-                    <p class="meta ten">My mom heard the name and liked it. Also I needed</p>
-                    <p class="meta-2 eleven">an African name for the school I went to—you couldn’t have a European name</p>
-                    <p class="meta twelve">Ayanna</p>
-                    <p class="meta thirteen">beautiful flower in Amharic</p>
+                    <p class="meta eight">no</p>
+                    <p class="meta-2 six">one</p>
                     <img class="circle" src="images/circle.png">
+                    <p class="meta ten">Sherry</p>
+                    <p class="meta eleven">ocean</p>
                 </div>
             </div>
             <div class="page">
                 <div class="content">
-                    <p class="helvetica">This is how my name influences my identity: __________________________________________________________________________________________________________.</p>
-                    <p class="meta-2 six">It’s nice to have a really black name, so I can be reminded of who I am and what I’m about</p>
+                    <p class="helvetica">This is how my name influences my identity: _________________________________________________________________________________.</p>
+                    <p class="meta-2 six">Sherry is my professional name. Kyee is only used in family settings</p>
                 </div>
             </div>
-            <div class="page longer-1">
+            <div class="page">
                 <!-- <img class="arrows" id="hover" src="images/up.png"> -->
                 <div class="content" id="container">
-
-                    <p class="helvetica">Here's a positive incident that my name played a significant role in my interaction with another person: ______________________________________________________________________.</p>
-                    <p class="meta-2 nine">People tell me my name is pretty and that always feels good</p>
+                    <p class="helvetica">Here's a positive incident that my name played a significant role in my interaction with another person: __________________________________________________________________________________________________________________________________________.</p>
+                    <p class="meta-2 nine">I met a woman recently that shared my name at a social event. We ended up hanging out all night at an Irish pub</p>
                     <br>
                     <br>
                 </div>
-                <!-- <img class="arrows" id="hover2" src="images/down.png">    -->
+                <!-- <img class="arrows" id="hover2" src="images/down.png">  -->
             </div>
             <div class="page">
                 <div class="content">
-                    <p class="helvetica">Here's a negative incident that my name played a significant role in my interaction with another person: _________________________________________________________________________________________________________________________________________.</p>
-                    <p class="meta-2 nine">I can’t think of any except when people act like they can’t pronounce it just by reading. It’s pretty straight forward</p>
+                    <p class="helvetica">Here's a negative incident that my name played a significant role in my interaction with another person: ___________________________________________________________________________________.</p>
+                    <p class="meta-2 nine">Hearing my given name used by a non family member made me upset</p>
                 </div>
             </div>
             <div class="page">
