--- a/archive.html
+++ b/archive.html
@@ -45,7 +45,7 @@
 
                     <a href="maggie.html"><img src="images/maggie.png" class="names meta ml-name" style="top: 65vh; left: 15vw;"></a>
 
-                    <!-- <a href="rita.html"><p class="names meta ml-name" style="top: -5vh; left: 43vw;">Rita</p></a> -->
+                    <a href="rita.html"><img src="images/rita.png" class="names meta ml-name" style="top: -5vh; left: 43vw;"></a>
 
                     <a href="mars.html"><img src="images/mars.png" class="names meta l-name" style="top: 15vh; left: 57vw;"></a>
 
