--- a/harriet.html
+++ b/harriet.html
@@ -10,7 +10,7 @@
         <link href="css/harriet.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <audio id="my_audio" src="audio/harriet.m4a"></audio>
+        <audio id="my_audio" src="audio/harriet.mp3"></audio>
         <div class="docScroller">
             <div class="page">
                 <div class="header">
