--- a/maggie.html
+++ b/maggie.html
@@ -10,7 +10,7 @@
         <link href="css/maggie.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <audio id="my_audio" src="audio/maggie.m4a"></audio>
+        <audio id="my_audio" src="audio/maggie.mp3"></audio>
         <div class="docScroller">
             <div class="page">
                 <div class="header">
