--- a/mars.html
+++ b/mars.html
@@ -10,7 +10,7 @@
         <link href="css/mars.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <audio id="my_audio" src="audio/mars.m4a"></audio>
+        <audio id="my_audio" src="audio/mars.mp3"></audio>
         <div class="docScroller">
             <div class="page">
                 <div class="header">
