--- a/nick.html
+++ b/nick.html
@@ -7,17 +7,17 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
         <link rel="stylesheet" href="https://use.typekit.net/rnh5bvu.css">
         <link href="css/style.css" rel="stylesheet" type="text/css">
-        <link href="css/matthew.css" rel="stylesheet" type="text/css">
+        <link href="css/nick.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <audio id="my_audio" src="audio/matthew.mp3"></audio>
+        <audio id="my_audio" src="audio/nick.mp3"></audio>
         <div class="docScroller">
             <div class="page">
                 <div class="header">
                     <a href="archive.html"><img class="logo-resize" src="images/logo.png"></a>
                     <div class="cont" style="width: 20vw; display: inline-block;">
                         <div align="center">
-                            <input type="text" name="search" id="search" placeholder="Matthew" class="form-control searchBox" autocomplete="off"/>
+                            <input type="text" name="search" id="search" placeholder="Nick" class="form-control searchBox" autocomplete="off"/>
                         </div>
                         <ul class="list-group helvetica-2" id="result"></ul>
                     </div>
@@ -26,51 +26,46 @@
                 </div>
 
                 <div class="content">
-                    <p class="helvetica">My given name is  ____________________________, and I prefer to go by _________________________.</p>
+                    <p class="helvetica">My given name is  ____________________________, and I prefer to go by _______________.</p>
                     <p class="helvetica">I am not called by any different names by my family or close friends.</p>
-                    <p class="meta one">Matthew Allen Padgett</p>
+                    <p class="meta one">Nicholas Shane Rogers</p>
                     <!-- <p class="meta two"></p> -->
-                    <p class="meta three">Matthew Padgett</p>
+                    <p class="meta three">Nick Rogers</p>
                 </div>
                 
             </div>
             <div class="page">
                 <div class="content">
-                    <p class="helvetica">I decided to go by ____________ because _________________________________<br>____________________________________________________________________________________.</p>
-                    <p class="meta four">Matthew</p>
-                    <p class="meta five">it is my given name, I have </p>
-                    <p class="meta-2 six">always gone by Matthew or Matt, without much preference either way</p>
+                    <p class="helvetica">I decided to go by _______ because ______________________________________<br>________________________________.</p>
+                    <p class="meta four">Nick</p>
+                    <p class="meta five">it is the nickname given by </p>
+                    <p class="meta-2 six">parents/siblings as a child</p>
                 </div>
             </div>
             <div class="page">
                 <!-- <img class="arrows" id="hover" src="images/up.png"> -->
                 <div class="content" id="container">
-                    <p class="helvetica">My legal name was given by _____________________________________________ _____________________________.</p>
+                    <p class="helvetica">My legal name was given by _______________, and they named me after _________.</p>
                     <p class="helvetica">My name  does / does not  have a cultural background.<!-- Cultural background of my name is ______________. --></p>
-                    <!-- <p class="helvetica">In _________, my name is written _________.</p> -->
-                    <p class="helvetica">_______________________________________________________.</p>
-                    <p class="meta seven">my parents, and my middle name is </p>
-                    <p class="meta eight">my moms maiden name</p>
-                    <p class="meta ten"></p>
-                    <img class="circle" src="images/circle.png">
-                    <!-- <p class="meta fourteen">I think it ties </p> -->
-                    <!-- <p class="meta fifteen">back to my mom's distant Irish heritage</p> -->
-                    <p class="meta-2 twelve">I don't think my name has any direct meaning<br><br></p>                    
+                    <p class="meta seven">my parents</p>
+                    <!-- <p class="meta eight">my moms maiden name</p> -->
+                    <p class="meta ten">no one</p>
+                    <img class="circle" src="images/circle.png">                
                 </div>
                 <!-- <img class="arrows" id="hover2" src="images/down.png">  -->
             </div>
             <div class="page">
                 <div class="content">
-                    <p class="helvetica">This is how my name influences my identity: ______________________________________________________________________________________________________________________________________________________.</p>
-                    <p class="meta-2 six">I wouldn't say it influenced my identity too much. If I were a Sean or Bob I would probably be a similar person to who I am today</p>
+                    <p class="helvetica">This is how my name influences my identity: __________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________.</p>
+                    <p class="meta-2 six">It's hard to say, because I live in a world where everyone's greetings and discussions with me utilize my name as a word, but I see it more as a signal of being addressed than a repres-entation of my person. It's a pretty common name so I don't feel that it's particularly unique</p>
                 </div>
             </div>
             <div class="page longer-1">
                 <!-- <img class="arrows" id="hover" src="images/up.png"> -->
                 <div class="content" id="container">
 
-                    <p class="helvetica">Here's a positive incident that my name played a significant role in my interaction with another person: _____________________________________________________________________________________________________________________________________________________________.</p>
-                    <p class="meta-2 nine">I can't think of one where my name played a significant role. Typically I don't think my name plays too big of a role in interactions</p>
+                    <p class="helvetica">Here's a positive incident that my name played a significant role in my interaction with another person: ______________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________.</p>
+                    <p class="meta-2 nine">I was at a cash register in a fast food restaurant when I realized that the man behind the register, me, and the man behind me were all named Nick. It was a fun moment that we got a laugh out of, and it kind of exemplifies how common my name is</p>
                     <br>
                     <br>
                 </div>
@@ -78,8 +73,8 @@
             </div>
             <div class="page">
                 <div class="content">
-                    <p class="helvetica">Here's a negative incident that my name played a significant role in my interaction with another person: _________________________________________________.</p>
-                    <p class="meta-2 nine">One time I was called Fadget (like faggot)</p>
+                    <p class="helvetica">Here's a negative incident that my name played a significant role in my interaction with another person: _______________________________________________________________________________________________________________________________________.</p>
+                    <p class="meta-2 nine">I can't recall any negative incidents beyond casual jokes and people rhyming words with my name when I was a kid</p>
                 </div>
             </div>
             <div class="page">
