--- a/rita.html
+++ b/rita.html
@@ -7,17 +7,17 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
         <link rel="stylesheet" href="https://use.typekit.net/rnh5bvu.css">
         <link href="css/style.css" rel="stylesheet" type="text/css">
-        <link href="css/sherry.css" rel="stylesheet" type="text/css">
+        <link href="css/rita.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <audio id="my_audio" src="audio/sherry.mp3"></audio>
+        <audio id="my_audio" src="audio/rita.mp3"></audio>
         <div class="docScroller">
             <div class="page">
                 <div class="header">
                     <a href="archive.html"><img class="logo-resize" src="images/logo.png"></a>
                     <div class="cont" style="width: 20vw; display: inline-block;">
                         <div align="center">
-                            <input type="text" name="search" id="search" placeholder="Sherry" class="form-control searchBox" autocomplete="off"/>
+                            <input type="text" name="search" id="search" placeholder="Rita" class="form-control searchBox" autocomplete="off"/>
                         </div>
                         <ul class="list-group helvetica-2" id="result"></ul>
                     </div>
@@ -26,47 +26,46 @@
                 </div>
 
                 <div class="content">
-                    <p class="helvetica">My given name is  __________________________, but I prefer to go by _________<br>__________.</p>
-                    <p class="helvetica">Among my family, I am _______.</p>
-                    <p class="meta one">Kyee Sherry Holmes</p>
-                    <p class="meta zero">Sherry</p>
-                    <p class="meta two">Holmes</p>
-                    <p class="meta three">Kyee</p>
+                    <p class="helvetica">My given name is  _______________, but I prefer to go by _______________.</p>
+                    <p class="helvetica">Among my friends and family, I am _________.</p>
+                    <p class="meta one">Rita Verma</p>
+                    <p class="meta zero">Rita Verma</p>
+                    <p class="meta three">Reets</p>
                 </div>
             </div>
             <div class="page">
                 <div class="content">
-                    <p class="helvetica">I decided to go by __________ because ___________________________________<br>__________________________________________________________________________________________________.</p>
-                    <p class="meta four">Sherry</p>
-                    <p class="meta five">it was the name I was called</p>
-                    <p class="meta-2 six">in school. Later, I found out Sherry is actually my middle name as a young adult</p>
+                    <p class="helvetica">I decided to go by ______ because _______________________________________<br>________________________________.</p>
+                    <p class="meta four">Rita</p>
+                    <p class="meta five">it is the name that was given to me</p>
+                    <p class="meta-2 six">at birth, and I stuck with it</p>
                 </div>
             </div>
             <div class="page">
                 <div class="content">
-                    <p class="helvetica">My legal name was given by _______________, and they named me after _____<br>______.</p>
+                    <p class="helvetica">My legal name was given by _______________, and they named me after __________________.</p>
                     <p class="helvetica">My name  does / does not  have a cultural background. <!-- Cultural background of my name is ______________. --></p>
                     <!-- <p class="helvetica">In _________, my name is written _________.</p> -->
-                    <p class="helvetica">_________ means ________.</p>
+                    <p class="helvetica">______ means ________.</p>
                     <p class="meta seven">my parents</p>
-                    <p class="meta eight">no</p>
-                    <p class="meta-2 six">one</p>
+                    <!-- <p class="meta eight">no</p> -->
+                    <p class="meta-2 six">Rita Hayworth</p>
                     <img class="circle" src="images/circle.png">
-                    <p class="meta ten">Sherry</p>
-                    <p class="meta eleven">ocean</p>
+                    <p class="meta ten">Rita</p>
+                    <p class="meta eleven">pearl</p>
                 </div>
             </div>
             <div class="page">
                 <div class="content">
-                    <p class="helvetica">This is how my name influences my identity: _________________________________________________________________________________.</p>
-                    <p class="meta-2 six">Sherry is my professional name. Kyee is only used in family settings</p>
+                    <p class="helvetica">This is how my name influences my identity: ___________________________________________________________________________________________________________________________________________________________________________________________________________________________________.</p>
+                    <p class="meta-2 six">I have a short name and it’s easy to pronounce which makes me feel approachable to most people. My name is classically feminine—and that’s the way I carry myself as well. Simple but classic</p>
                 </div>
             </div>
             <div class="page">
                 <!-- <img class="arrows" id="hover" src="images/up.png"> -->
                 <div class="content" id="container">
-                    <p class="helvetica">Here's a positive incident that my name played a significant role in my interaction with another person: __________________________________________________________________________________________________________________________________________.</p>
-                    <p class="meta-2 nine">I met a woman recently that shared my name at a social event. We ended up hanging out all night at an Irish pub</p>
+                    <p class="helvetica">Here's a positive incident that my name played a significant role in my interaction with another person: __________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________.</p>
+                    <p class="meta-2 nine">People always love singing the Beatles song ‘Lovely Rita Meter Maid’ when I introduce myself. It’s an ice breaker and helps them to remember my name. This happens all the time and it’s a funny/enjoyable experience</p>
                     <br>
                     <br>
                 </div>
@@ -74,8 +73,8 @@
             </div>
             <div class="page">
                 <div class="content">
-                    <p class="helvetica">Here's a negative incident that my name played a significant role in my interaction with another person: ___________________________________________________________________________________.</p>
-                    <p class="meta-2 nine">Hearing my given name used by a non family member made me upset</p>
+                    <p class="helvetica">Here's a negative incident that my name played a significant role in my interaction with another person: ______________________________________________________________________________________________________________________________________________________________________________________________________________.</p>
+                    <p class="meta-2 nine">When I was very young (7 or 8) a few times one kid called me retard—ie RITARD. It only happened once or twice but I still remember it. As an adult, nothing negative I can recall</p>
                 </div>
             </div>
             <div class="page">
