--- a/russell.html
+++ b/russell.html
@@ -7,17 +7,17 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
         <link rel="stylesheet" href="https://use.typekit.net/rnh5bvu.css">
         <link href="css/style.css" rel="stylesheet" type="text/css">
-        <link href="css/bersabeh.css" rel="stylesheet" type="text/css">
+        <link href="css/russell.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <audio id="my_audio" src="audio/bersabeh.mp3"></audio>
+        <audio id="my_audio" src="audio/russell.mp3"></audio>
         <div class="docScroller">
             <div class="page">
                 <div class="header">
                     <a href="archive.html"><img class="logo-resize" src="images/logo.png"></a>
                     <div class="cont" style="width: 20vw; display: inline-block;">
                         <div align="center">
-                            <input type="text" name="search" id="search" placeholder="Bersabeh" class="form-control searchBox" autocomplete="off"/>
+                            <input type="text" name="search" id="search" placeholder="Russell" class="form-control searchBox" autocomplete="off"/>
                         </div>
                         <ul class="list-group helvetica-2" id="result"></ul>
                     </div>
@@ -26,59 +26,52 @@
                 </div>
 
                 <div class="content">
-                    <p class="helvetica">My given name is  _______________________________, but I prefer to go by _____________________.</p>
-                    <p class="helvetica">Among my family, I am ________.</p>
-<!--                     <p class="helvetica">I am not called by any different names by my family or close friends.</p> -->
-                    <p class="meta one">Bersabeh Dinberu Zenebe</p>
-                    <p class="meta two">Bersabeh Zenebe</p>
-                    <p class="meta three">Bersi</p>
-                </div>
-                
-            </div>
-            <div class="page">
-                <div class="content">
-                    <p class="helvetica">I decided to go by ____________ because ________________________________<br>________________________________________________________.</p>
-                    <p class="meta four">Bersabeh</p>
-                    <p class="meta five">I tell everyone that they</p>
-                    <p class="meta-2 six">can only use my legal name, it's only respectful</p>
+                    <p class="helvetica">My given name is  _______________________________, but I prefer to go by _________________________.</p>
+                    <p class="helvetica">I am not called by any different names by my family or close friends, but __________________________________________________________________________________________________________________________________________________________.</p>
+                    <p class="meta one">Russell Alan Beckham</p>
+                    <p class="meta two">Russell Beckham</p>
+                    <p class="meta-2 three">sometimes my mother calls me by brother's name. His name is Randall and because they both start with R she gets confused</p>
                 </div>
             </div>
             <div class="page">
                 <div class="content">
-                    <p class="helvetica">My legal name was given by _______________, and they named me ___________ after __________________.</p>
-                    <p class="helvetica">My name  does / does not  have a cultural background, and the cultural background of my name is _____________.</p>
+                    <p class="helvetica">I decided to go by __________ because ___________________________________<br>______________________.</p>
+                    <p class="meta four">Russell </p>
+                    <p class="meta five">my mama gave me that name </p>
+                    <p class="meta-2 six">and I stuck with it</p>
+                </div>
+            </div>
+            <div class="page">
+                <div class="content">
+                    <p class="helvetica">My legal name was given by _______________, and they named me after _____<br>______________________.</p>
+                    <p class="helvetica">My name  does / does not  have a cultural background. <!-- Cultural background of my name is ______________. --></p>
                     <!-- <p class="helvetica">In _________, my name is written _________.</p> -->
-                    <p class="helvetica">____________ represents ________________________.</p>
                     <p class="meta seven">my parents</p>
-                    <p class="meta eight">Bersabeh</p>
-                    <p class="meta ten">Queen Sheba</p>
-                    <p class="meta fourteen">Ethiopian</p>
-                    <p class="meta twelve">Bersabeh</p>
-                    <p class="meta thirteen">a Queen in the Bible</p>
+                    <p class="meta eight">my</p>
+                    <p class="meta-2 six">great grandfather</p>
                     <img class="circle" src="images/circle.png">
                 </div>
             </div>
             <div class="page">
                 <div class="content">
-                    <p class="helvetica">This is how my name influences my identity: ________________________________________________________________________________________________________________.</p>
-                    <p class="meta-2 six">It is how I present and introduce myself to people, thus my first form of identity presentation</p>
+                    <p class="helvetica">This is how my name influences my identity: ______________________________________________________________________________________________________________________________________________________________________________________________________________________________.</p>
+                    <p class="meta-2 six">I'm not totally sure, but I think my name has some influence on my identity. I don't think I'm really self-conscious of it, but I liked my name, and I don't think I would change it for any reason</p>
                 </div>
             </div>
-            <div class="page longer-1">
+            <div class="page">
                 <!-- <img class="arrows" id="hover" src="images/up.png"> -->
                 <div class="content" id="container">
-
-                    <p class="helvetica">Here's a positive incident that my name played a significant role in my interaction with another person: __________________________________________________________________________________________________.</p>
-                    <p class="meta-2 nine">It has sparked conversation about my culture and I'm able to inform others about it</p>
+                    <p class="helvetica">Here's a positive incident that my name played a significant role in my interaction with another person: _________________________________________________________________________________________________________________________________.</p>
+                    <p class="meta-2 nine">When I'm at the gym, and we're playing basketball people call me Russell Westbrook because I'm nice wit it</p>
                     <br>
                     <br>
                 </div>
-                <!-- <img class="arrows" id="hover2" src="images/down.png">    -->
+                <!-- <img class="arrows" id="hover2" src="images/down.png">  -->
             </div>
             <div class="page">
                 <div class="content">
-                    <p class="helvetica">Here's a negative incident that my name played a significant role in my interaction with another person: _______________________________________________________________________________________.</p>
-                    <p class="meta-2 nine">It was mispronounced at almost any event where I was called up to a stage</p>
+                    <p class="helvetica">Here's a negative incident that my name played a significant role in my interaction with another person: <br> __________________________.</p>
+                    <p class="meta-2 nine">I don't remember any</p>
                 </div>
             </div>
             <div class="page">
