--- a/kuu.html
+++ b/kuu.html
@@ -10,7 +10,7 @@
         <link href="css/kuu.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <audio id="my_audio" src="audio/kuu.m4a"></audio>
+        <audio id="my_audio" src="audio/kuu.mp3"></audio>
         <div class="docScroller">
             <div class="page">
                 <div class="header">
