--- a/soa.html
+++ b/soa.html
@@ -10,7 +10,7 @@
         <link href="css/soa.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <audio id="my_audio" src="audio/soa.m4a"></audio>
+        <audio id="my_audio" src="audio/soa.mp3"></audio>
         <div class="docScroller">
             <div class="page">
                 <div class="header">
