--- a/tony.html
+++ b/tony.html
@@ -10,7 +10,7 @@
         <link href="css/tony.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <audio id="my_audio" src="audio/tony.m4a"></audio>
+        <audio id="my_audio" src="audio/tony.mp3"></audio>
         <div class="docScroller">
             <div class="page">
                 <div class="header">
